--- a/agnostic-blueprint/blueprint.yaml
+++ b/agnostic-blueprint/blueprint.yaml
@@ -1,4 +1,4 @@
-name: Agnostic-Blueprint # change the blueprint name to your team's name
+name: Group-5-Agnostic-Blueprint # change the blueprint name to your team's name
 version: 1 # this version number should increase as you change your blueprint code
 resources:
   Cloud_Machine_1:
