--- a/agnostic-blueprint/blueprint.yaml
+++ b/agnostic-blueprint/blueprint.yaml
@@ -8,12 +8,8 @@ resources:
       flavor: Small # you can set your own definition of flavor on the infrastructure tab, pay attention to this too
       networks:
         - name: '${resource.Cloud_Network_1.name}' 
-      cloudConfig: |
-        #cloudconfig
-        packages:
-        - apache2
 Cloud_Network_1:
     type: Cloud.Network
     properties:
-      name: Group-5-network-profile
+      name: public
       networkType: existing
